--- a/src/components/jeep-photoviewer/jeep-photo-buttons/jeep-photo-buttons.css
+++ b/src/components/jeep-photoviewer/jeep-photo-buttons/jeep-photo-buttons.css
@@ -1,21 +1,25 @@
 :host {
   display: block;
-  --photo-buttons-height: 50px;
+  --photo-buttons-height: min(7vmin, 40px);
+  --photo-buttons-padding: 3px;
 }
 .photobuttons-container {
   position: absolute;
   top: 5vh;
   left: 0;
-  width: 100vh;
+  width: 100vw;
   height: var(--photo-buttons-height);
-  background-color: rgba(0,0,0,0.0);
+  background-color: rgba(125,125,125,0.3);
   visibility: visible;
 }
-
+.wrapper {
+  width: 100%;
+  height: 100%;
+}
 .share-button {
   position: absolute;
   top: 0;
-  left: 50px;
+  left: 7vmin;
   width: var(--photo-buttons-height);
   height: var(--photo-buttons-height);
   background-position: center;
@@ -35,7 +39,7 @@
 .close-button {
   position: absolute;
   top: 0;
-  left: calc(100vw - var(--photo-buttons-height) - 50px);
+  left: calc(100vw - var(--photo-buttons-height) - 7vmin);
   width: var(--photo-buttons-height);
   height: var(--photo-buttons-height);
   background-position: center;
