--- a/src/components/jeep-photoviewer/jeep-photoviewer.css
+++ b/src/components/jeep-photoviewer/jeep-photoviewer.css
@@ -3,6 +3,13 @@
   --gallery-box-width: 33.33vw;
   --gallery-template-columns: auto auto auto;
 }
+.photoviewer-container::-webkit-scrollbar {
+  display: none;
+}
+.photoviewer-container {
+  -ms-autohiding-scrollbar: none;
+  scrollbar-width: 0;
+}
 .wrapper {
   display: grid;
   width: 100vw;
