--- a/src/components/jeep-photoviewer/jeep-photo-hscroll/jeep-photo-hscroll.css
+++ b/src/components/jeep-photoviewer/jeep-photo-hscroll/jeep-photo-hscroll.css
@@ -52,6 +52,16 @@
   height: 100vh;
   object-fit: contain;
 }
+.carousel-title {
+  position: absolute;
+  bottom: 0;
+  visibility: visible;
+  width: 100%;
+  height: 40px;
+  color: #fff;
+  font: 2.5vh Arial, sans-serif;
+
+}
 .hidden {
   visibility: hidden;
 }
