add backgroundcolor to options parameter

--- a/src/components/jeep-photoviewer/jeep-photo-hscroll/jeep-photo-hscroll.css
+++ b/src/components/jeep-photoviewer/jeep-photo-hscroll/jeep-photo-hscroll.css
@@ -1,6 +1,6 @@
 :host {
   display: block;
-  --hscroll-background-color: #000;
+  --hscroll-background-color: var(--photoviewer-background-color);
 }
 .hscroll-container {
   position: absolute;
