--- a/src/components/jeep-photoviewer/jeep-photoviewer.css
+++ b/src/components/jeep-photoviewer/jeep-photoviewer.css
@@ -37,6 +37,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: #fffff0;
 }
 /*
 */
